MA-2: added a fragments of the movie list, updated a main page activity, added a fragment of movie details

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,5 +11,6 @@
         <item quantity="many">%1$d РЕЦЕНЗИЙ</item>
         <item quantity="other">%1$d РЕЦЕНЗИЙ</item>
     </plurals>
+    <string name="movies_list">Список фильмов</string>
 
 </resources>
