MA-4: added data layer and viewModelFactory, changed layouts and viewModels, removed unnecessary resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
         <item quantity="other">%1$d REVIEWS</item>
     </plurals>
 
+    <string name="age_restriction" translatable="false">%1$d+</string>
     <string name="movie_duration" translatable="false">%1$d MIN</string>
     <string name="movies_list">Movies list</string>
 </resources>
